syntax = "proto3";
package kujira.oracle;

import "gogoproto/gogo.proto";
import "kujira/oracle/oracle.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Team-Kujira/core/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params                     params             = 1 [(gogoproto.nullable) = false];
  repeated ExchangeRateTuple exchange_rates     = 2
      [(gogoproto.castrepeated) = "ExchangeRateTuples", (gogoproto.nullable) = false];
  repeated MissCounter       miss_counters      = 3 [(gogoproto.nullable) = false];
  repeated HistoricalExchangeRate      historical_exchange_rates  = 4 [(gogoproto.nullable) = false];
}

// FeederDelegation is the address for where oracle feeder authority are
// delegated to. By default this struct is only used at genesis to feed in
// default feeder addresses.
message FeederDelegation {
  string feeder_address    = 1;
  string validator_address = 2;
}

// MissCounter defines an miss counter and validator address pair used in
// oracle module's genesis state
message MissCounter {
  string validator_address = 1;
  uint64 miss_counter      = 2;
}